cmake_minimum_required(VERSION 3.10)

project(user_space_vfs)

set(CMAKE_VERBOSE_MAKEFILE ON)

add_definitions(
    -DCONFIG_CC_IS_GCC
    -DCONFIG_GCC_VERSION
    -DCONFIG_CLANG_VERSION
    -DCONFIG_CC_CAN_LINK
    -DCONFIG_CC_HAS_ASM_GOTO
    -DCONFIG_CC_HAS_ASM_INLINE
    -DCONFIG_CC_HAS_WARN_MAYBE_UNINITIALIZED
    -DCONFIG_IRQ_WORK
    -DCONFIG_BUILDTIME_EXTABLE_SORT
    -DCONFIG_THREAD_INFO_IN_TASK
    -DCONFIG_INIT_ENV_ARG_LIMIT
    -DCONFIG_LOCALVERSION
    -DCONFIG_BUILD_SALT
    -DCONFIG_HAVE_KERNEL_GZIP
    -DCONFIG_HAVE_KERNEL_BZIP2
    -DCONFIG_HAVE_KERNEL_LZMA
    -DCONFIG_HAVE_KERNEL_XZ
    -DCONFIG_HAVE_KERNEL_LZO
    -DCONFIG_HAVE_KERNEL_LZ4
    -DCONFIG_KERNEL_GZIP
    -DCONFIG_DEFAULT_HOSTNAME
    -DCONFIG_SWAP
    -DCONFIG_SYSVIPC
    -DCONFIG_SYSVIPC_SYSCTL
    -DCONFIG_POSIX_MQUEUE
    -DCONFIG_POSIX_MQUEUE_SYSCTL
    -DCONFIG_CROSS_MEMORY_ATTACH
    -DCONFIG_USELIB
    -DCONFIG_AUDIT
    -DCONFIG_HAVE_ARCH_AUDITSYSCALL
    -DCONFIG_AUDITSYSCALL
    -DCONFIG_GENERIC_IRQ_PROBE
    -DCONFIG_GENERIC_IRQ_SHOW
    -DCONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK
    -DCONFIG_GENERIC_PENDING_IRQ
    -DCONFIG_GENERIC_IRQ_MIGRATION
    -DCONFIG_IRQ_DOMAIN
    -DCONFIG_IRQ_DOMAIN_HIERARCHY
    -DCONFIG_GENERIC_MSI_IRQ
    -DCONFIG_GENERIC_MSI_IRQ_DOMAIN
    -DCONFIG_GENERIC_IRQ_MATRIX_ALLOCATOR
    -DCONFIG_GENERIC_IRQ_RESERVATION_MODE
    -DCONFIG_IRQ_FORCED_THREADING
    -DCONFIG_SPARSE_IRQ
    -DCONFIG_CLOCKSOURCE_WATCHDOG
    -DCONFIG_ARCH_CLOCKSOURCE_DATA
    -DCONFIG_ARCH_CLOCKSOURCE_INIT
    -DCONFIG_CLOCKSOURCE_VALIDATE_LAST_CYCLE
    -DCONFIG_GENERIC_TIME_VSYSCALL
    -DCONFIG_GENERIC_CLOCKEVENTS
    -DCONFIG_GENERIC_CLOCKEVENTS_BROADCAST
    -DCONFIG_GENERIC_CLOCKEVENTS_MIN_ADJUST
    -DCONFIG_GENERIC_CMOS_UPDATE
    -DCONFIG_TICK_ONESHOT
    -DCONFIG_NO_HZ_COMMON
    -DCONFIG_NO_HZ_IDLE
    -DCONFIG_NO_HZ
    -DCONFIG_HIGH_RES_TIMERS
    -DCONFIG_PREEMPT_VOLUNTARY
    -DCONFIG_TICK_CPU_ACCOUNTING
    -DCONFIG_BSD_PROCESS_ACCT
    -DCONFIG_TASKSTATS
    -DCONFIG_TASK_DELAY_ACCT
    -DCONFIG_TASK_XACCT
    -DCONFIG_TASK_IO_ACCOUNTING
    -DCONFIG_CPU_ISOLATION
    -DCONFIG_TREE_RCU
    -DCONFIG_SRCU
    -DCONFIG_TREE_SRCU
    -DCONFIG_RCU_STALL_COMMON
    -DCONFIG_RCU_NEED_SEGCBLIST
    -DCONFIG_LOG_BUF_SHIFT
    -DCONFIG_LOG_CPU_MAX_BUF_SHIFT
    -DCONFIG_PRINTK_SAFE_LOG_BUF_SHIFT
    -DCONFIG_HAVE_UNSTABLE_SCHED_CLOCK
    -DCONFIG_ARCH_SUPPORTS_NUMA_BALANCING
    -DCONFIG_ARCH_WANT_BATCHED_UNMAP_TLB_FLUSH
    -DCONFIG_ARCH_SUPPORTS_INT128
    -DCONFIG_CGROUPS
    -DCONFIG_CGROUP_SCHED
    -DCONFIG_FAIR_GROUP_SCHED
    -DCONFIG_CGROUP_FREEZER
    -DCONFIG_CPUSETS
    -DCONFIG_PROC_PID_CPUSET
    -DCONFIG_CGROUP_CPUACCT
    -DCONFIG_NAMESPACES
    -DCONFIG_UTS_NS
    -DCONFIG_IPC_NS
    -DCONFIG_PID_NS
    -DCONFIG_NET_NS
    -DCONFIG_RELAY
    -DCONFIG_BLK_DEV_INITRD
    -DCONFIG_INITRAMFS_SOURCE
    -DCONFIG_RD_GZIP
    -DCONFIG_RD_BZIP2
    -DCONFIG_RD_LZMA
    -DCONFIG_RD_XZ
    -DCONFIG_RD_LZO
    -DCONFIG_RD_LZ4
    -DCONFIG_CC_OPTIMIZE_FOR_PERFORMANCE
    -DCONFIG_SYSCTL
    -DCONFIG_HAVE_UID16
    -DCONFIG_SYSCTL_EXCEPTION_TRACE
    -DCONFIG_HAVE_PCSPKR_PLATFORM
    -DCONFIG_BPF
    -DCONFIG_UID16
    -DCONFIG_MULTIUSER
    -DCONFIG_SGETMASK_SYSCALL
    -DCONFIG_SYSFS_SYSCALL
    -DCONFIG_FHANDLE
    -DCONFIG_POSIX_TIMERS
    -DCONFIG_PRINTK
    -DCONFIG_PRINTK_NMI
    -DCONFIG_BUG
    -DCONFIG_ELF_CORE
    -DCONFIG_PCSPKR_PLATFORM
    -DCONFIG_BASE_FULL
    -DCONFIG_FUTEX
    -DCONFIG_FUTEX_PI
    -DCONFIG_EPOLL
    -DCONFIG_SIGNALFD
    -DCONFIG_TIMERFD
    -DCONFIG_EVENTFD
    -DCONFIG_SHMEM
    -DCONFIG_AIO
    -DCONFIG_IO_URING
    -DCONFIG_ADVISE_SYSCALLS
    -DCONFIG_MEMBARRIER
    -DCONFIG_KALLSYMS
    -DCONFIG_KALLSYMS_ABSOLUTE_PERCPU
    -DCONFIG_KALLSYMS_BASE_RELATIVE
    -DCONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE
    -DCONFIG_RSEQ
    -DCONFIG_HAVE_PERF_EVENTS
    -DCONFIG_PERF_EVENTS
    -DCONFIG_VM_EVENT_COUNTERS
    -DCONFIG_SLUB_DEBUG
    -DCONFIG_SLUB
    -DCONFIG_SLAB_MERGE_DEFAULT
    -DCONFIG_SLUB_CPU_PARTIAL
    -DCONFIG_SYSTEM_DATA_VERIFICATION
    -DCONFIG_PROFILING
    -DCONFIG_TRACEPOINTS
    -DCONFIG_64BIT
    -DCONFIG_X86_64
    -DCONFIG_X86
    -DCONFIG_INSTRUCTION_DECODER
    -DCONFIG_OUTPUT_FORMAT
    -DCONFIG_ARCH_DEFCONFIG
    -DCONFIG_LOCKDEP_SUPPORT
    -DCONFIG_STACKTRACE_SUPPORT
    -DCONFIG_MMU
    -DCONFIG_ARCH_MMAP_RND_BITS_MIN
    -DCONFIG_ARCH_MMAP_RND_BITS_MAX
    -DCONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN
    -DCONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX
    -DCONFIG_GENERIC_ISA_DMA
    -DCONFIG_GENERIC_BUG
    -DCONFIG_GENERIC_BUG_RELATIVE_POINTERS
    -DCONFIG_ARCH_MAY_HAVE_PC_FDC
    -DCONFIG_GENERIC_CALIBRATE_DELAY
    -DCONFIG_ARCH_HAS_CPU_RELAX
    -DCONFIG_ARCH_HAS_CACHE_LINE_SIZE
    -DCONFIG_ARCH_HAS_FILTER_PGPROT
    -DCONFIG_HAVE_SETUP_PER_CPU_AREA
    -DCONFIG_NEED_PER_CPU_EMBED_FIRST_CHUNK
    -DCONFIG_NEED_PER_CPU_PAGE_FIRST_CHUNK
    -DCONFIG_ARCH_HIBERNATION_POSSIBLE
    -DCONFIG_ARCH_SUSPEND_POSSIBLE
    -DCONFIG_ARCH_WANT_GENERAL_HUGETLB
    -DCONFIG_ZONE_DMA32
    -DCONFIG_AUDIT_ARCH
    -DCONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC
    -DCONFIG_HAVE_INTEL_TXT
    -DCONFIG_X86_64_SMP
    -DCONFIG_ARCH_SUPPORTS_UPROBES
    -DCONFIG_FIX_EARLYCON_MEM
    -DCONFIG_PGTABLE_LEVELS
    -DCONFIG_CC_HAS_SANE_STACKPROTECTOR
    -DCONFIG_ZONE_DMA
    -DCONFIG_SMP
    -DCONFIG_X86_FEATURE_NAMES
    -DCONFIG_X86_MPPARSE
    -DCONFIG_RETPOLINE
    -DCONFIG_X86_EXTENDED_PLATFORM
    -DCONFIG_IOSF_MBI
    -DCONFIG_X86_SUPPORTS_MEMORY_FAILURE
    -DCONFIG_SCHED_OMIT_FRAME_POINTER
    -DCONFIG_HYPERVISOR_GUEST
    -DCONFIG_PARAVIRT
    -DCONFIG_KVM_GUEST
    -DCONFIG_ARCH_CPUIDLE_HALTPOLL
    -DCONFIG_PARAVIRT_CLOCK
    -DCONFIG_GENERIC_CPU
    -DCONFIG_X86_INTERNODE_CACHE_SHIFT
    -DCONFIG_X86_L1_CACHE_SHIFT
    -DCONFIG_X86_TSC
    -DCONFIG_X86_CMPXCHG64
    -DCONFIG_X86_CMOV
    -DCONFIG_X86_MINIMUM_CPU_FAMILY
    -DCONFIG_X86_DEBUGCTLMSR
    -DCONFIG_CPU_SUP_INTEL
    -DCONFIG_CPU_SUP_AMD
    -DCONFIG_CPU_SUP_HYGON
    -DCONFIG_CPU_SUP_CENTAUR
    -DCONFIG_CPU_SUP_ZHAOXIN
    -DCONFIG_HPET_TIMER
    -DCONFIG_HPET_EMULATE_RTC
    -DCONFIG_DMI
    -DCONFIG_CALGARY_IOMMU
    -DCONFIG_CALGARY_IOMMU_ENABLED_BY_DEFAULT
    -DCONFIG_NR_CPUS_RANGE_BEGIN
    -DCONFIG_NR_CPUS_RANGE_END
    -DCONFIG_NR_CPUS_DEFAULT
    -DCONFIG_NR_CPUS
    -DCONFIG_SCHED_SMT
    -DCONFIG_SCHED_MC
    -DCONFIG_SCHED_MC_PRIO
    -DCONFIG_X86_LOCAL_APIC
    -DCONFIG_X86_IO_APIC
    -DCONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS
    -DCONFIG_X86_MCE
    -DCONFIG_X86_MCE_INTEL
    -DCONFIG_X86_MCE_AMD
    -DCONFIG_X86_MCE_THRESHOLD
    -DCONFIG_X86_THERMAL_VECTOR
    -DCONFIG_PERF_EVENTS_INTEL_UNCORE
    -DCONFIG_PERF_EVENTS_INTEL_RAPL
    -DCONFIG_PERF_EVENTS_INTEL_CSTATE
    -DCONFIG_X86_16BIT
    -DCONFIG_X86_ESPFIX64
    -DCONFIG_X86_VSYSCALL_EMULATION
    -DCONFIG_MICROCODE
    -DCONFIG_MICROCODE_INTEL
    -DCONFIG_MICROCODE_AMD
    -DCONFIG_X86_MSR
    -DCONFIG_X86_CPUID
    -DCONFIG_X86_DIRECT_GBPAGES
    -DCONFIG_NUMA
    -DCONFIG_AMD_NUMA
    -DCONFIG_X86_64_ACPI_NUMA
    -DCONFIG_NODES_SPAN_OTHER_NODES
    -DCONFIG_NODES_SHIFT
    -DCONFIG_ARCH_SPARSEMEM_ENABLE
    -DCONFIG_ARCH_SPARSEMEM_DEFAULT
    -DCONFIG_ARCH_SELECT_MEMORY_MODEL
    -DCONFIG_ARCH_PROC_KCORE_TEXT
    -DCONFIG_ILLEGAL_POINTER_VALUE
    -DCONFIG_X86_CHECK_BIOS_CORRUPTION
    -DCONFIG_X86_BOOTPARAM_MEMORY_CORRUPTION_CHECK
    -DCONFIG_X86_RESERVE_LOW
    -DCONFIG_MTRR
    -DCONFIG_X86_PAT
    -DCONFIG_ARCH_USES_PG_UNCACHED
    -DCONFIG_ARCH_RANDOM
    -DCONFIG_X86_SMAP
    -DCONFIG_X86_INTEL_UMIP
    -DCONFIG_X86_INTEL_MEMORY_PROTECTION_KEYS
    -DCONFIG_X86_INTEL_TSX_MODE_OFF
    -DCONFIG_EFI
    -DCONFIG_EFI_STUB
    -DCONFIG_EFI_MIXED
    -DCONFIG_SECCOMP
    -DCONFIG_HZ_1000
    -DCONFIG_HZ
    -DCONFIG_SCHED_HRTICK
    -DCONFIG_KEXEC
    -DCONFIG_CRASH_DUMP
    -DCONFIG_PHYSICAL_START
    -DCONFIG_RELOCATABLE
    -DCONFIG_RANDOMIZE_BASE
    -DCONFIG_X86_NEED_RELOCS
    -DCONFIG_PHYSICAL_ALIGN
    -DCONFIG_DYNAMIC_MEMORY_LAYOUT
    -DCONFIG_RANDOMIZE_MEMORY
    -DCONFIG_RANDOMIZE_MEMORY_PHYSICAL_PADDING
    -DCONFIG_HOTPLUG_CPU
    -DCONFIG_LEGACY_VSYSCALL_XONLY
    -DCONFIG_MODIFY_LDT_SYSCALL
    -DCONFIG_HAVE_LIVEPATCH
    -DCONFIG_ARCH_HAS_ADD_PAGES
    -DCONFIG_ARCH_ENABLE_MEMORY_HOTPLUG
    -DCONFIG_USE_PERCPU_NUMA_NODE_ID
    -DCONFIG_ARCH_ENABLE_SPLIT_PMD_PTLOCK
    -DCONFIG_ARCH_ENABLE_HUGEPAGE_MIGRATION
    -DCONFIG_ARCH_HIBERNATION_HEADER
    -DCONFIG_SUSPEND
    -DCONFIG_SUSPEND_FREEZER
    -DCONFIG_HIBERNATE_CALLBACKS
    -DCONFIG_HIBERNATION
    -DCONFIG_PM_STD_PARTITION
    -DCONFIG_PM_SLEEP
    -DCONFIG_PM_SLEEP_SMP
    -DCONFIG_PM
    -DCONFIG_PM_DEBUG
    -DCONFIG_PM_SLEEP_DEBUG
    -DCONFIG_PM_TRACE
    -DCONFIG_PM_TRACE_RTC
    -DCONFIG_PM_CLK
    -DCONFIG_ARCH_SUPPORTS_ACPI
    -DCONFIG_ACPI
    -DCONFIG_ACPI_LEGACY_TABLES_LOOKUP
    -DCONFIG_ARCH_MIGHT_HAVE_ACPI_PDC
    -DCONFIG_ACPI_SYSTEM_POWER_STATES_SUPPORT
    -DCONFIG_ACPI_SPCR_TABLE
    -DCONFIG_ACPI_LPIT
    -DCONFIG_ACPI_SLEEP
    -DCONFIG_ACPI_REV_OVERRIDE_POSSIBLE
    -DCONFIG_ACPI_AC
    -DCONFIG_ACPI_BATTERY
    -DCONFIG_ACPI_BUTTON
    -DCONFIG_ACPI_VIDEO
    -DCONFIG_ACPI_FAN
    -DCONFIG_ACPI_DOCK
    -DCONFIG_ACPI_CPU_FREQ_PSS
    -DCONFIG_ACPI_PROCESSOR_CSTATE
    -DCONFIG_ACPI_PROCESSOR_IDLE
    -DCONFIG_ACPI_CPPC_LIB
    -DCONFIG_ACPI_PROCESSOR
    -DCONFIG_ACPI_HOTPLUG_CPU
    -DCONFIG_ACPI_THERMAL
    -DCONFIG_ACPI_NUMA
    -DCONFIG_ARCH_HAS_ACPI_TABLE_UPGRADE
    -DCONFIG_ACPI_TABLE_UPGRADE
    -DCONFIG_ACPI_CONTAINER
    -DCONFIG_ACPI_HOTPLUG_IOAPIC
    -DCONFIG_ACPI_BGRT
    -DCONFIG_HAVE_ACPI_APEI
    -DCONFIG_HAVE_ACPI_APEI_NMI
    -DCONFIG_X86_PM_TIMER
    -DCONFIG_CPU_FREQ
    -DCONFIG_CPU_FREQ_GOV_ATTR_SET
    -DCONFIG_CPU_FREQ_GOV_COMMON
    -DCONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE
    -DCONFIG_CPU_FREQ_GOV_PERFORMANCE
    -DCONFIG_CPU_FREQ_GOV_USERSPACE
    -DCONFIG_CPU_FREQ_GOV_ONDEMAND
    -DCONFIG_X86_INTEL_PSTATE
    -DCONFIG_X86_ACPI_CPUFREQ
    -DCONFIG_X86_ACPI_CPUFREQ_CPB
    -DCONFIG_CPU_IDLE
    -DCONFIG_CPU_IDLE_GOV_MENU
    -DCONFIG_HALTPOLL_CPUIDLE
    -DCONFIG_PCI_DIRECT
    -DCONFIG_PCI_MMCONFIG
    -DCONFIG_MMCONF_FAM10H
    -DCONFIG_ISA_DMA_API
    -DCONFIG_AMD_NB
    -DCONFIG_IA32_EMULATION
    -DCONFIG_COMPAT_32
    -DCONFIG_COMPAT
    -DCONFIG_COMPAT_FOR_U64_ALIGNMENT
    -DCONFIG_SYSVIPC_COMPAT
    -DCONFIG_FIRMWARE_MEMMAP
    -DCONFIG_DMIID
    -DCONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK
    -DCONFIG_EFI_VARS
    -DCONFIG_EFI_ESRT
    -DCONFIG_EFI_RUNTIME_MAP
    -DCONFIG_EFI_RUNTIME_WRAPPERS
    -DCONFIG_EFI_EARLYCON
    -DCONFIG_HAVE_KVM
    -DCONFIG_VIRTUALIZATION
    -DCONFIG_CRASH_CORE
    -DCONFIG_KEXEC_CORE
    -DCONFIG_HOTPLUG_SMT
    -DCONFIG_HAVE_OPROFILE
    -DCONFIG_OPROFILE_NMI_TIMER
    -DCONFIG_KPROBES
    -DCONFIG_JUMP_LABEL
    -DCONFIG_OPTPROBES
    -DCONFIG_UPROBES
    -DCONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS
    -DCONFIG_ARCH_USE_BUILTIN_BSWAP
    -DCONFIG_KRETPROBES
    -DCONFIG_HAVE_IOREMAP_PROT
    -DCONFIG_HAVE_KPROBES
    -DCONFIG_HAVE_KRETPROBES
    -DCONFIG_HAVE_OPTPROBES
    -DCONFIG_HAVE_KPROBES_ON_FTRACE
    -DCONFIG_HAVE_FUNCTION_ERROR_INJECTION
    -DCONFIG_HAVE_NMI
    -DCONFIG_HAVE_ARCH_TRACEHOOK
    -DCONFIG_HAVE_DMA_CONTIGUOUS
    -DCONFIG_GENERIC_SMP_IDLE_THREAD
    -DCONFIG_ARCH_HAS_FORTIFY_SOURCE
    -DCONFIG_ARCH_HAS_SET_MEMORY
    -DCONFIG_ARCH_HAS_SET_DIRECT_MAP
    -DCONFIG_HAVE_ARCH_THREAD_STRUCT_WHITELIST
    -DCONFIG_ARCH_WANTS_DYNAMIC_TASK_STRUCT
    -DCONFIG_HAVE_ASM_MODVERSIONS
    -DCONFIG_HAVE_REGS_AND_STACK_ACCESS_API
    -DCONFIG_HAVE_RSEQ
    -DCONFIG_HAVE_FUNCTION_ARG_ACCESS_API
    -DCONFIG_HAVE_CLK
    -DCONFIG_HAVE_HW_BREAKPOINT
    -DCONFIG_HAVE_MIXED_BREAKPOINTS_REGS
    -DCONFIG_HAVE_USER_RETURN_NOTIFIER
    -DCONFIG_HAVE_PERF_EVENTS_NMI
    -DCONFIG_HAVE_HARDLOCKUP_DETECTOR_PERF
    -DCONFIG_HAVE_PERF_REGS
    -DCONFIG_HAVE_PERF_USER_STACK_DUMP
    -DCONFIG_HAVE_ARCH_JUMP_LABEL
    -DCONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE
    -DCONFIG_HAVE_RCU_TABLE_FREE
    -DCONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG
    -DCONFIG_HAVE_ALIGNED_STRUCT_PAGE
    -DCONFIG_HAVE_CMPXCHG_LOCAL
    -DCONFIG_HAVE_CMPXCHG_DOUBLE
    -DCONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION
    -DCONFIG_ARCH_WANT_OLD_COMPAT_IPC
    -DCONFIG_HAVE_ARCH_SECCOMP_FILTER
    -DCONFIG_SECCOMP_FILTER
    -DCONFIG_HAVE_ARCH_STACKLEAK
    -DCONFIG_HAVE_STACKPROTECTOR
    -DCONFIG_CC_HAS_STACKPROTECTOR_NONE
    -DCONFIG_STACKPROTECTOR
    -DCONFIG_STACKPROTECTOR_STRONG
    -DCONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES
    -DCONFIG_HAVE_CONTEXT_TRACKING
    -DCONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN
    -DCONFIG_HAVE_IRQ_TIME_ACCOUNTING
    -DCONFIG_HAVE_MOVE_PMD
    -DCONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE
    -DCONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE_PUD
    -DCONFIG_HAVE_ARCH_HUGE_VMAP
    -DCONFIG_ARCH_WANT_HUGE_PMD_SHARE
    -DCONFIG_HAVE_ARCH_SOFT_DIRTY
    -DCONFIG_HAVE_MOD_ARCH_SPECIFIC
    -DCONFIG_MODULES_USE_ELF_RELA
    -DCONFIG_HAVE_IRQ_EXIT_ON_IRQ_STACK
    -DCONFIG_ARCH_HAS_ELF_RANDOMIZE
    -DCONFIG_HAVE_ARCH_MMAP_RND_BITS
    -DCONFIG_HAVE_EXIT_THREAD
    -DCONFIG_ARCH_MMAP_RND_BITS
    -DCONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS
    -DCONFIG_ARCH_MMAP_RND_COMPAT_BITS
    -DCONFIG_HAVE_ARCH_COMPAT_MMAP_BASES
    -DCONFIG_HAVE_COPY_THREAD_TLS
    -DCONFIG_HAVE_STACK_VALIDATION
    -DCONFIG_HAVE_RELIABLE_STACKTRACE
    -DCONFIG_OLD_SIGSUSPEND3
    -DCONFIG_COMPAT_OLD_SIGACTION
    -DCONFIG_64BIT_TIME
    -DCONFIG_COMPAT_32BIT_TIME
    -DCONFIG_HAVE_ARCH_VMAP_STACK
    -DCONFIG_VMAP_STACK
    -DCONFIG_ARCH_HAS_STRICT_KERNEL_RWX
    -DCONFIG_STRICT_KERNEL_RWX
    -DCONFIG_ARCH_HAS_STRICT_MODULE_RWX
    -DCONFIG_STRICT_MODULE_RWX
    -DCONFIG_ARCH_HAS_REFCOUNT
    -DCONFIG_HAVE_ARCH_PREL32_RELOCATIONS
    -DCONFIG_ARCH_USE_MEMREMAP_PROT
    -DCONFIG_ARCH_HAS_MEM_ENCRYPT
    -DCONFIG_ARCH_HAS_GCOV_PROFILE_ALL
    -DCONFIG_PLUGIN_HOSTCC
    -DCONFIG_HAVE_GCC_PLUGINS
    -DCONFIG_RT_MUTEXES
    -DCONFIG_BASE_SMALL
    -DCONFIG_MODULES
    -DCONFIG_MODULE_UNLOAD
    -DCONFIG_MODULE_FORCE_UNLOAD
    -DCONFIG_MODULES_TREE_LOOKUP
    -DCONFIG_BLOCK
    -DCONFIG_BLK_SCSI_REQUEST
    -DCONFIG_BLK_DEV_BSG
    -DCONFIG_BLK_DEBUG_FS
    -DCONFIG_MSDOS_PARTITION
    -DCONFIG_EFI_PARTITION
    -DCONFIG_BLOCK_COMPAT
    -DCONFIG_BLK_MQ_PCI
    -DCONFIG_BLK_MQ_VIRTIO
    -DCONFIG_BLK_PM
    -DCONFIG_MQ_IOSCHED_DEADLINE
    -DCONFIG_MQ_IOSCHED_KYBER
    -DCONFIG_ASN1
    -DCONFIG_INLINE_SPIN_UNLOCK_IRQ
    -DCONFIG_INLINE_READ_UNLOCK
    -DCONFIG_INLINE_READ_UNLOCK_IRQ
    -DCONFIG_INLINE_WRITE_UNLOCK
    -DCONFIG_INLINE_WRITE_UNLOCK_IRQ
    -DCONFIG_ARCH_SUPPORTS_ATOMIC_RMW
    -DCONFIG_MUTEX_SPIN_ON_OWNER
    -DCONFIG_RWSEM_SPIN_ON_OWNER
    -DCONFIG_LOCK_SPIN_ON_OWNER
    -DCONFIG_ARCH_USE_QUEUED_SPINLOCKS
    -DCONFIG_QUEUED_SPINLOCKS
    -DCONFIG_ARCH_USE_QUEUED_RWLOCKS
    -DCONFIG_QUEUED_RWLOCKS
    -DCONFIG_ARCH_HAS_SYNC_CORE_BEFORE_USERMODE
    -DCONFIG_ARCH_HAS_SYSCALL_WRAPPER
    -DCONFIG_FREEZER
    -DCONFIG_BINFMT_ELF
    -DCONFIG_COMPAT_BINFMT_ELF
    -DCONFIG_ELFCORE
    -DCONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS
    -DCONFIG_BINFMT_SCRIPT
    -DCONFIG_BINFMT_MISC
    -DCONFIG_COREDUMP
    -DCONFIG_SELECT_MEMORY_MODEL
    -DCONFIG_SPARSEMEM_MANUAL
    -DCONFIG_SPARSEMEM
    -DCONFIG_NEED_MULTIPLE_NODES
    -DCONFIG_HAVE_MEMORY_PRESENT
    -DCONFIG_SPARSEMEM_EXTREME
    -DCONFIG_SPARSEMEM_VMEMMAP_ENABLE
    -DCONFIG_SPARSEMEM_VMEMMAP
    -DCONFIG_HAVE_MEMBLOCK_NODE_MAP
    -DCONFIG_HAVE_FAST_GUP
    -DCONFIG_SPLIT_PTLOCK_CPUS
    -DCONFIG_COMPACTION
    -DCONFIG_MIGRATION
    -DCONFIG_PHYS_ADDR_T_64BIT
    -DCONFIG_BOUNCE
    -DCONFIG_VIRT_TO_BUS
    -DCONFIG_MMU_NOTIFIER
    -DCONFIG_DEFAULT_MMAP_MIN_ADDR
    -DCONFIG_ARCH_SUPPORTS_MEMORY_FAILURE
    -DCONFIG_ARCH_WANTS_THP_SWAP
    -DCONFIG_GENERIC_EARLY_IOREMAP
    -DCONFIG_ARCH_HAS_PTE_DEVMAP
    -DCONFIG_ARCH_USES_HIGH_VMA_FLAGS
    -DCONFIG_ARCH_HAS_PKEYS
    -DCONFIG_ARCH_HAS_PTE_SPECIAL
    -DCONFIG_NET
    -DCONFIG_NET_INGRESS
    -DCONFIG_SKB_EXTENSIONS
    -DCONFIG_PACKET
    -DCONFIG_UNIX
    -DCONFIG_UNIX_SCM
    -DCONFIG_XFRM
    -DCONFIG_XFRM_ALGO
    -DCONFIG_XFRM_USER
    -DCONFIG_INET
    -DCONFIG_IP_MULTICAST
    -DCONFIG_IP_ADVANCED_ROUTER
    -DCONFIG_IP_MULTIPLE_TABLES
    -DCONFIG_IP_ROUTE_MULTIPATH
    -DCONFIG_IP_ROUTE_VERBOSE
    -DCONFIG_IP_PNP
    -DCONFIG_IP_PNP_DHCP
    -DCONFIG_IP_PNP_BOOTP
    -DCONFIG_IP_PNP_RARP
    -DCONFIG_NET_IP_TUNNEL
    -DCONFIG_IP_MROUTE_COMMON
    -DCONFIG_IP_MROUTE
    -DCONFIG_IP_PIMSM_V1
    -DCONFIG_IP_PIMSM_V2
    -DCONFIG_SYN_COOKIES
    -DCONFIG_INET_TUNNEL
    -DCONFIG_TCP_CONG_ADVANCED
    -DCONFIG_TCP_CONG_CUBIC
    -DCONFIG_DEFAULT_CUBIC
    -DCONFIG_DEFAULT_TCP_CONG
    -DCONFIG_TCP_MD5SIG
    -DCONFIG_IPV6
    -DCONFIG_INET6_AH
    -DCONFIG_INET6_ESP
    -DCONFIG_IPV6_SIT
    -DCONFIG_IPV6_NDISC_NODETYPE
    -DCONFIG_NETLABEL
    -DCONFIG_NETWORK_SECMARK
    -DCONFIG_NET_PTP_CLASSIFY
    -DCONFIG_NETFILTER
    -DCONFIG_NETFILTER_INGRESS
    -DCONFIG_NETFILTER_NETLINK
    -DCONFIG_NETFILTER_NETLINK_LOG
    -DCONFIG_NF_CONNTRACK
    -DCONFIG_NF_LOG_COMMON
    -DCONFIG_NF_CONNTRACK_SECMARK
    -DCONFIG_NF_CONNTRACK_PROCFS
    -DCONFIG_NF_CONNTRACK_FTP
    -DCONFIG_NF_CONNTRACK_IRC
    -DCONFIG_NF_CONNTRACK_SIP
    -DCONFIG_NF_CT_NETLINK
    -DCONFIG_NF_NAT
    -DCONFIG_NF_NAT_FTP
    -DCONFIG_NF_NAT_IRC
    -DCONFIG_NF_NAT_SIP
    -DCONFIG_NF_NAT_MASQUERADE
    -DCONFIG_NETFILTER_XTABLES
    -DCONFIG_NETFILTER_XT_MARK
    -DCONFIG_NETFILTER_XT_TARGET_CONNSECMARK
    -DCONFIG_NETFILTER_XT_TARGET_LOG
    -DCONFIG_NETFILTER_XT_NAT
    -DCONFIG_NETFILTER_XT_TARGET_NFLOG
    -DCONFIG_NETFILTER_XT_TARGET_MASQUERADE
    -DCONFIG_NETFILTER_XT_TARGET_SECMARK
    -DCONFIG_NETFILTER_XT_TARGET_TCPMSS
    -DCONFIG_NETFILTER_XT_MATCH_ADDRTYPE
    -DCONFIG_NETFILTER_XT_MATCH_CONNTRACK
    -DCONFIG_NETFILTER_XT_MATCH_POLICY
    -DCONFIG_NETFILTER_XT_MATCH_STATE
    -DCONFIG_NF_DEFRAG_IPV4
    -DCONFIG_NF_LOG_ARP
    -DCONFIG_NF_LOG_IPV4
    -DCONFIG_NF_REJECT_IPV4
    -DCONFIG_IP_NF_IPTABLES
    -DCONFIG_IP_NF_FILTER
    -DCONFIG_IP_NF_TARGET_REJECT
    -DCONFIG_IP_NF_NAT
    -DCONFIG_IP_NF_TARGET_MASQUERADE
    -DCONFIG_IP_NF_MANGLE
    -DCONFIG_NF_REJECT_IPV6
    -DCONFIG_NF_LOG_IPV6
    -DCONFIG_IP6_NF_IPTABLES
    -DCONFIG_IP6_NF_MATCH_IPV6HEADER
    -DCONFIG_IP6_NF_FILTER
    -DCONFIG_IP6_NF_TARGET_REJECT
    -DCONFIG_IP6_NF_MANGLE
    -DCONFIG_NF_DEFRAG_IPV6
    -DCONFIG_HAVE_NET_DSA
    -DCONFIG_NET_SCHED
    -DCONFIG_NET_CLS
    -DCONFIG_NET_EMATCH
    -DCONFIG_NET_EMATCH_STACK
    -DCONFIG_NET_CLS_ACT
    -DCONFIG_NET_SCH_FIFO
    -DCONFIG_DNS_RESOLVER
    -DCONFIG_RPS
    -DCONFIG_RFS_ACCEL
    -DCONFIG_XPS
    -DCONFIG_NET_RX_BUSY_POLL
    -DCONFIG_BQL
    -DCONFIG_NET_FLOW_LIMIT
    -DCONFIG_HAMRADIO
    -DCONFIG_FIB_RULES
    -DCONFIG_WIRELESS
    -DCONFIG_CFG80211
    -DCONFIG_CFG80211_REQUIRE_SIGNED_REGDB
    -DCONFIG_CFG80211_USE_KERNEL_REGDB_KEYS
    -DCONFIG_CFG80211_DEFAULT_PS
    -DCONFIG_CFG80211_CRDA_SUPPORT
    -DCONFIG_MAC80211
    -DCONFIG_MAC80211_HAS_RC
    -DCONFIG_MAC80211_RC_MINSTREL
    -DCONFIG_MAC80211_RC_DEFAULT_MINSTREL
    -DCONFIG_MAC80211_RC_DEFAULT
    -DCONFIG_MAC80211_LEDS
    -DCONFIG_MAC80211_STA_HASH_MAX_SIZE
    -DCONFIG_RFKILL
    -DCONFIG_RFKILL_LEDS
    -DCONFIG_RFKILL_INPUT
    -DCONFIG_NET_9P
    -DCONFIG_NET_9P_VIRTIO
    -DCONFIG_DST_CACHE
    -DCONFIG_GRO_CELLS
    -DCONFIG_FAILOVER
    -DCONFIG_HAVE_EBPF_JIT
    -DCONFIG_HAVE_EISA
    -DCONFIG_HAVE_PCI
    -DCONFIG_PCI
    -DCONFIG_PCI_DOMAINS
    -DCONFIG_PCIEPORTBUS
    -DCONFIG_PCIEAER
    -DCONFIG_PCIEASPM
    -DCONFIG_PCIEASPM_DEFAULT
    -DCONFIG_PCIE_PME
    -DCONFIG_PCI_MSI
    -DCONFIG_PCI_MSI_IRQ_DOMAIN
    -DCONFIG_PCI_QUIRKS
    -DCONFIG_PCI_ATS
    -DCONFIG_PCI_LOCKLESS_CONFIG
    -DCONFIG_PCI_PRI
    -DCONFIG_PCI_PASID
    -DCONFIG_PCI_LABEL
    -DCONFIG_HOTPLUG_PCI
    -DCONFIG_PCCARD
    -DCONFIG_PCMCIA
    -DCONFIG_PCMCIA_LOAD_CIS
    -DCONFIG_CARDBUS
    -DCONFIG_YENTA
    -DCONFIG_YENTA_O2
    -DCONFIG_YENTA_RICOH
    -DCONFIG_YENTA_TI
    -DCONFIG_YENTA_ENE_TUNE
    -DCONFIG_YENTA_TOSHIBA
    -DCONFIG_PCCARD_NONSTATIC
    -DCONFIG_DEVTMPFS
    -DCONFIG_DEVTMPFS_MOUNT
    -DCONFIG_STANDALONE
    -DCONFIG_PREVENT_FIRMWARE_BUILD
    -DCONFIG_FW_LOADER
    -DCONFIG_EXTRA_FIRMWARE
    -DCONFIG_ALLOW_DEV_COREDUMP
    -DCONFIG_DEBUG_DEVRES
    -DCONFIG_GENERIC_CPU_AUTOPROBE
    -DCONFIG_GENERIC_CPU_VULNERABILITIES
    -DCONFIG_REGMAP
    -DCONFIG_REGMAP_I2C
    -DCONFIG_DMA_SHARED_BUFFER
    -DCONFIG_CONNECTOR
    -DCONFIG_PROC_EVENTS
    -DCONFIG_ARCH_MIGHT_HAVE_PC_PARPORT
    -DCONFIG_PNP
    -DCONFIG_PNP_DEBUG_MESSAGES
    -DCONFIG_PNPACPI
    -DCONFIG_BLK_DEV
    -DCONFIG_CDROM
    -DCONFIG_BLK_DEV_LOOP
    -DCONFIG_BLK_DEV_LOOP_MIN_COUNT
    -DCONFIG_VIRTIO_BLK
    -DCONFIG_HAVE_IDE
    -DCONFIG_SCSI_MOD
    -DCONFIG_SCSI
    -DCONFIG_SCSI_DMA
    -DCONFIG_SCSI_PROC_FS
    -DCONFIG_BLK_DEV_SD
    -DCONFIG_BLK_DEV_SR
    -DCONFIG_BLK_DEV_SR_VENDOR
    -DCONFIG_CHR_DEV_SG
    -DCONFIG_SCSI_CONSTANTS
    -DCONFIG_SCSI_SPI_ATTRS
    -DCONFIG_SCSI_LOWLEVEL
    -DCONFIG_SCSI_VIRTIO
    -DCONFIG_ATA
    -DCONFIG_ATA_VERBOSE_ERROR
    -DCONFIG_ATA_ACPI
    -DCONFIG_SATA_PMP
    -DCONFIG_SATA_AHCI
    -DCONFIG_SATA_MOBILE_LPM_POLICY
    -DCONFIG_ATA_SFF
    -DCONFIG_ATA_BMDMA
    -DCONFIG_ATA_PIIX
    -DCONFIG_PATA_AMD
    -DCONFIG_PATA_OLDPIIX
    -DCONFIG_PATA_SCH
    -DCONFIG_MD
    -DCONFIG_BLK_DEV_MD
    -DCONFIG_MD_AUTODETECT
    -DCONFIG_BLK_DEV_DM_BUILTIN
    -DCONFIG_BLK_DEV_DM
    -DCONFIG_DM_MIRROR
    -DCONFIG_DM_ZERO
    -DCONFIG_MACINTOSH_DRIVERS
    -DCONFIG_MAC_EMUMOUSEBTN
    -DCONFIG_NETDEVICES
    -DCONFIG_MII
    -DCONFIG_NET_CORE
    -DCONFIG_NETCONSOLE
    -DCONFIG_NETPOLL
    -DCONFIG_NET_POLL_CONTROLLER
    -DCONFIG_VIRTIO_NET
    -DCONFIG_ETHERNET
    -DCONFIG_NET_VENDOR_3COM
    -DCONFIG_NET_VENDOR_ADAPTEC
    -DCONFIG_NET_VENDOR_AGERE
    -DCONFIG_NET_VENDOR_ALACRITECH
    -DCONFIG_NET_VENDOR_ALTEON
    -DCONFIG_NET_VENDOR_AMAZON
    -DCONFIG_NET_VENDOR_AMD
    -DCONFIG_NET_VENDOR_AQUANTIA
    -DCONFIG_NET_VENDOR_ARC
    -DCONFIG_NET_VENDOR_ATHEROS
    -DCONFIG_NET_VENDOR_AURORA
    -DCONFIG_NET_VENDOR_BROADCOM
    -DCONFIG_TIGON3
    -DCONFIG_TIGON3_HWMON
    -DCONFIG_NET_VENDOR_BROCADE
    -DCONFIG_NET_VENDOR_CADENCE
    -DCONFIG_NET_VENDOR_CAVIUM
    -DCONFIG_NET_VENDOR_CHELSIO
    -DCONFIG_NET_VENDOR_CISCO
    -DCONFIG_NET_VENDOR_CORTINA
    -DCONFIG_NET_VENDOR_DEC
    -DCONFIG_NET_TULIP
    -DCONFIG_NET_VENDOR_DLINK
    -DCONFIG_NET_VENDOR_EMULEX
    -DCONFIG_NET_VENDOR_EZCHIP
    -DCONFIG_NET_VENDOR_FUJITSU
    -DCONFIG_NET_VENDOR_GOOGLE
    -DCONFIG_NET_VENDOR_HP
    -DCONFIG_NET_VENDOR_HUAWEI
    -DCONFIG_NET_VENDOR_I825XX
    -DCONFIG_NET_VENDOR_INTEL
    -DCONFIG_E100
    -DCONFIG_E1000
    -DCONFIG_E1000E
    -DCONFIG_E1000E_HWTS
    -DCONFIG_NET_VENDOR_MARVELL
    -DCONFIG_SKY2
    -DCONFIG_NET_VENDOR_MELLANOX
    -DCONFIG_NET_VENDOR_MICREL
    -DCONFIG_NET_VENDOR_MICROCHIP
    -DCONFIG_NET_VENDOR_MICROSEMI
    -DCONFIG_NET_VENDOR_MYRI
    -DCONFIG_NET_VENDOR_NATSEMI
    -DCONFIG_NET_VENDOR_NETERION
    -DCONFIG_NET_VENDOR_NETRONOME
    -DCONFIG_NET_VENDOR_NI
    -DCONFIG_NET_VENDOR_8390
    -DCONFIG_NET_VENDOR_NVIDIA
    -DCONFIG_FORCEDETH
    -DCONFIG_NET_VENDOR_OKI
    -DCONFIG_NET_VENDOR_PACKET_ENGINES
    -DCONFIG_NET_VENDOR_PENSANDO
    -DCONFIG_NET_VENDOR_QLOGIC
    -DCONFIG_NET_VENDOR_QUALCOMM
    -DCONFIG_NET_VENDOR_RDC
    -DCONFIG_NET_VENDOR_REALTEK
    -DCONFIG_8139TOO
    -DCONFIG_8139TOO_PIO
    -DCONFIG_R8169
    -DCONFIG_NET_VENDOR_RENESAS
    -DCONFIG_NET_VENDOR_ROCKER
    -DCONFIG_NET_VENDOR_SAMSUNG
    -DCONFIG_NET_VENDOR_SEEQ
    -DCONFIG_NET_VENDOR_SOLARFLARE
    -DCONFIG_NET_VENDOR_SILAN
    -DCONFIG_NET_VENDOR_SIS
    -DCONFIG_NET_VENDOR_SMSC
    -DCONFIG_NET_VENDOR_SOCIONEXT
    -DCONFIG_NET_VENDOR_STMICRO
    -DCONFIG_NET_VENDOR_SUN
    -DCONFIG_NET_VENDOR_SYNOPSYS
    -DCONFIG_NET_VENDOR_TEHUTI
    -DCONFIG_NET_VENDOR_TI
    -DCONFIG_NET_VENDOR_VIA
    -DCONFIG_NET_VENDOR_WIZNET
    -DCONFIG_NET_VENDOR_XILINX
    -DCONFIG_NET_VENDOR_XIRCOM
    -DCONFIG_FDDI
    -DCONFIG_MDIO_DEVICE
    -DCONFIG_MDIO_BUS
    -DCONFIG_PHYLIB
    -DCONFIG_REALTEK_PHY
    -DCONFIG_USB_NET_DRIVERS
    -DCONFIG_WLAN
    -DCONFIG_WLAN_VENDOR_ADMTEK
    -DCONFIG_WLAN_VENDOR_ATH
    -DCONFIG_WLAN_VENDOR_ATMEL
    -DCONFIG_WLAN_VENDOR_BROADCOM
    -DCONFIG_WLAN_VENDOR_CISCO
    -DCONFIG_WLAN_VENDOR_INTEL
    -DCONFIG_WLAN_VENDOR_INTERSIL
    -DCONFIG_WLAN_VENDOR_MARVELL
    -DCONFIG_WLAN_VENDOR_MEDIATEK
    -DCONFIG_WLAN_VENDOR_RALINK
    -DCONFIG_WLAN_VENDOR_REALTEK
    -DCONFIG_RTL_CARDS
    -DCONFIG_WLAN_VENDOR_RSI
    -DCONFIG_WLAN_VENDOR_ST
    -DCONFIG_WLAN_VENDOR_TI
    -DCONFIG_WLAN_VENDOR_ZYDAS
    -DCONFIG_WLAN_VENDOR_QUANTENNA
    -DCONFIG_NET_FAILOVER
    -DCONFIG_INPUT
    -DCONFIG_INPUT_LEDS
    -DCONFIG_INPUT_FF_MEMLESS
    -DCONFIG_INPUT_POLLDEV
    -DCONFIG_INPUT_SPARSEKMAP
    -DCONFIG_INPUT_EVDEV
    -DCONFIG_INPUT_KEYBOARD
    -DCONFIG_KEYBOARD_ATKBD
    -DCONFIG_INPUT_MOUSE
    -DCONFIG_MOUSE_PS2
    -DCONFIG_MOUSE_PS2_ALPS
    -DCONFIG_MOUSE_PS2_BYD
    -DCONFIG_MOUSE_PS2_LOGIPS2PP
    -DCONFIG_MOUSE_PS2_SYNAPTICS
    -DCONFIG_MOUSE_PS2_SYNAPTICS_SMBUS
    -DCONFIG_MOUSE_PS2_CYPRESS
    -DCONFIG_MOUSE_PS2_LIFEBOOK
    -DCONFIG_MOUSE_PS2_TRACKPOINT
    -DCONFIG_MOUSE_PS2_FOCALTECH
    -DCONFIG_MOUSE_PS2_SMBUS
    -DCONFIG_INPUT_JOYSTICK
    -DCONFIG_INPUT_TABLET
    -DCONFIG_INPUT_TOUCHSCREEN
    -DCONFIG_TOUCHSCREEN_PROPERTIES
    -DCONFIG_INPUT_MISC
    -DCONFIG_SERIO
    -DCONFIG_ARCH_MIGHT_HAVE_PC_SERIO
    -DCONFIG_SERIO_I8042
    -DCONFIG_SERIO_SERPORT
    -DCONFIG_SERIO_LIBPS2
    -DCONFIG_TTY
    -DCONFIG_VT
    -DCONFIG_CONSOLE_TRANSLATIONS
    -DCONFIG_VT_CONSOLE
    -DCONFIG_VT_CONSOLE_SLEEP
    -DCONFIG_HW_CONSOLE
    -DCONFIG_VT_HW_CONSOLE_BINDING
    -DCONFIG_UNIX98_PTYS
    -DCONFIG_SERIAL_NONSTANDARD
    -DCONFIG_LDISC_AUTOLOAD
    -DCONFIG_DEVMEM
    -DCONFIG_SERIAL_EARLYCON
    -DCONFIG_SERIAL_8250
    -DCONFIG_SERIAL_8250_DEPRECATED_OPTIONS
    -DCONFIG_SERIAL_8250_PNP
    -DCONFIG_SERIAL_8250_CONSOLE
    -DCONFIG_SERIAL_8250_DMA
    -DCONFIG_SERIAL_8250_PCI
    -DCONFIG_SERIAL_8250_EXAR
    -DCONFIG_SERIAL_8250_NR_UARTS
    -DCONFIG_SERIAL_8250_RUNTIME_UARTS
    -DCONFIG_SERIAL_8250_EXTENDED
    -DCONFIG_SERIAL_8250_MANY_PORTS
    -DCONFIG_SERIAL_8250_SHARE_IRQ
    -DCONFIG_SERIAL_8250_DETECT_IRQ
    -DCONFIG_SERIAL_8250_RSA
    -DCONFIG_SERIAL_8250_DWLIB
    -DCONFIG_SERIAL_8250_LPSS
    -DCONFIG_SERIAL_8250_MID
    -DCONFIG_SERIAL_CORE
    -DCONFIG_SERIAL_CORE_CONSOLE
    -DCONFIG_HVC_DRIVER
    -DCONFIG_VIRTIO_CONSOLE
    -DCONFIG_HW_RANDOM
    -DCONFIG_HW_RANDOM_VIA
    -DCONFIG_NVRAM
    -DCONFIG_HPET
    -DCONFIG_DEVPORT
    -DCONFIG_I2C
    -DCONFIG_ACPI_I2C_OPREGION
    -DCONFIG_I2C_BOARDINFO
    -DCONFIG_I2C_COMPAT
    -DCONFIG_I2C_HELPER_AUTO
    -DCONFIG_I2C_SMBUS
    -DCONFIG_I2C_ALGOBIT
    -DCONFIG_I2C_I801
    -DCONFIG_PPS
    -DCONFIG_PTP_1588_CLOCK
    -DCONFIG_PTP_1588_CLOCK_KVM
    -DCONFIG_POWER_SUPPLY
    -DCONFIG_POWER_SUPPLY_HWMON
    -DCONFIG_HWMON
    -DCONFIG_THERMAL
    -DCONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS
    -DCONFIG_THERMAL_HWMON
    -DCONFIG_THERMAL_WRITABLE_TRIPS
    -DCONFIG_THERMAL_DEFAULT_GOV_STEP_WISE
    -DCONFIG_THERMAL_GOV_STEP_WISE
    -DCONFIG_THERMAL_GOV_USER_SPACE
    -DCONFIG_X86_PKG_TEMP_THERMAL
    -DCONFIG_WATCHDOG
    -DCONFIG_WATCHDOG_HANDLE_BOOT_ENABLED
    -DCONFIG_WATCHDOG_OPEN_TIMEOUT
    -DCONFIG_SSB_POSSIBLE
    -DCONFIG_BCMA_POSSIBLE
    -DCONFIG_AGP
    -DCONFIG_AGP_AMD64
    -DCONFIG_AGP_INTEL
    -DCONFIG_INTEL_GTT
    -DCONFIG_VGA_ARB
    -DCONFIG_VGA_ARB_MAX_GPUS
    -DCONFIG_DRM
    -DCONFIG_DRM_MIPI_DSI
    -DCONFIG_DRM_KMS_HELPER
    -DCONFIG_DRM_KMS_FB_HELPER
    -DCONFIG_DRM_FBDEV_EMULATION
    -DCONFIG_DRM_FBDEV_OVERALLOC
    -DCONFIG_DRM_TTM
    -DCONFIG_DRM_I915
    -DCONFIG_DRM_I915_FORCE_PROBE
    -DCONFIG_DRM_I915_CAPTURE_ERROR
    -DCONFIG_DRM_I915_COMPRESS_ERROR
    -DCONFIG_DRM_I915_USERPTR
    -DCONFIG_DRM_I915_USERFAULT_AUTOSUSPEND
    -DCONFIG_DRM_I915_SPIN_REQUEST
    -DCONFIG_DRM_VIRTIO_GPU
    -DCONFIG_DRM_PANEL
    -DCONFIG_DRM_BRIDGE
    -DCONFIG_DRM_PANEL_BRIDGE
    -DCONFIG_DRM_PANEL_ORIENTATION_QUIRKS
    -DCONFIG_FB_CMDLINE
    -DCONFIG_FB_NOTIFY
    -DCONFIG_FB
    -DCONFIG_FB_CFB_FILLRECT
    -DCONFIG_FB_CFB_COPYAREA
    -DCONFIG_FB_CFB_IMAGEBLIT
    -DCONFIG_FB_SYS_FILLRECT
    -DCONFIG_FB_SYS_COPYAREA
    -DCONFIG_FB_SYS_IMAGEBLIT
    -DCONFIG_FB_SYS_FOPS
    -DCONFIG_FB_DEFERRED_IO
    -DCONFIG_FB_MODE_HELPERS
    -DCONFIG_FB_TILEBLITTING
    -DCONFIG_FB_EFI
    -DCONFIG_BACKLIGHT_CLASS_DEVICE
    -DCONFIG_BACKLIGHT_GENERIC
    -DCONFIG_HDMI
    -DCONFIG_VGA_CONSOLE
    -DCONFIG_VGACON_SOFT_SCROLLBACK
    -DCONFIG_VGACON_SOFT_SCROLLBACK_SIZE
    -DCONFIG_DUMMY_CONSOLE
    -DCONFIG_DUMMY_CONSOLE_COLUMNS
    -DCONFIG_DUMMY_CONSOLE_ROWS
    -DCONFIG_FRAMEBUFFER_CONSOLE
    -DCONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY
    -DCONFIG_LOGO
    -DCONFIG_LOGO_LINUX_CLUT224
    -DCONFIG_SOUND
    -DCONFIG_SND
    -DCONFIG_SND_TIMER
    -DCONFIG_SND_PCM
    -DCONFIG_SND_HWDEP
    -DCONFIG_SND_SEQ_DEVICE
    -DCONFIG_SND_JACK
    -DCONFIG_SND_JACK_INPUT_DEV
    -DCONFIG_SND_PCM_TIMER
    -DCONFIG_SND_HRTIMER
    -DCONFIG_SND_SUPPORT_OLD_API
    -DCONFIG_SND_PROC_FS
    -DCONFIG_SND_VERBOSE_PROCFS
    -DCONFIG_SND_VMASTER
    -DCONFIG_SND_DMA_SGBUF
    -DCONFIG_SND_SEQUENCER
    -DCONFIG_SND_SEQ_DUMMY
    -DCONFIG_SND_SEQ_HRTIMER_DEFAULT
    -DCONFIG_SND_DRIVERS
    -DCONFIG_SND_PCI
    -DCONFIG_SND_HDA
    -DCONFIG_SND_HDA_INTEL
    -DCONFIG_SND_HDA_HWDEP
    -DCONFIG_SND_HDA_POWER_SAVE_DEFAULT
    -DCONFIG_SND_HDA_CORE
    -DCONFIG_SND_HDA_COMPONENT
    -DCONFIG_SND_HDA_I915
    -DCONFIG_SND_HDA_PREALLOC_SIZE
    -DCONFIG_SND_INTEL_NHLT
    -DCONFIG_SND_USB
    -DCONFIG_SND_PCMCIA
    -DCONFIG_SND_X86
    -DCONFIG_HID
    -DCONFIG_HIDRAW
    -DCONFIG_HID_GENERIC
    -DCONFIG_HID_A4TECH
    -DCONFIG_HID_APPLE
    -DCONFIG_HID_BELKIN
    -DCONFIG_HID_CHERRY
    -DCONFIG_HID_CHICONY
    -DCONFIG_HID_CYPRESS
    -DCONFIG_HID_EZKEY
    -DCONFIG_HID_GYRATION
    -DCONFIG_HID_ITE
    -DCONFIG_HID_KENSINGTON
    -DCONFIG_HID_LOGITECH
    -DCONFIG_LOGITECH_FF
    -DCONFIG_LOGIWHEELS_FF
    -DCONFIG_HID_REDRAGON
    -DCONFIG_HID_MICROSOFT
    -DCONFIG_HID_MONTEREY
    -DCONFIG_HID_NTRIG
    -DCONFIG_HID_PANTHERLORD
    -DCONFIG_PANTHERLORD_FF
    -DCONFIG_HID_PETALYNX
    -DCONFIG_HID_SAMSUNG
    -DCONFIG_HID_SONY
    -DCONFIG_HID_SUNPLUS
    -DCONFIG_HID_TOPSEED
    -DCONFIG_USB_HID
    -DCONFIG_HID_PID
    -DCONFIG_USB_HIDDEV
    -DCONFIG_USB_OHCI_LITTLE_ENDIAN
    -DCONFIG_USB_SUPPORT
    -DCONFIG_USB_COMMON
    -DCONFIG_USB_ARCH_HAS_HCD
    -DCONFIG_USB
    -DCONFIG_USB_PCI
    -DCONFIG_USB_ANNOUNCE_NEW_DEVICES
    -DCONFIG_USB_DEFAULT_PERSIST
    -DCONFIG_USB_AUTOSUSPEND_DELAY
    -DCONFIG_USB_MON
    -DCONFIG_USB_XHCI_HCD
    -DCONFIG_USB_XHCI_PCI
    -DCONFIG_USB_EHCI_HCD
    -DCONFIG_USB_EHCI_TT_NEWSCHED
    -DCONFIG_USB_EHCI_PCI
    -DCONFIG_USB_OHCI_HCD
    -DCONFIG_USB_OHCI_HCD_PCI
    -DCONFIG_USB_UHCI_HCD
    -DCONFIG_USB_PRINTER
    -DCONFIG_USB_STORAGE
    -DCONFIG_NEW_LEDS
    -DCONFIG_LEDS_CLASS
    -DCONFIG_LEDS_TRIGGERS
    -DCONFIG_EDAC_ATOMIC_SCRUB
    -DCONFIG_EDAC_SUPPORT
    -DCONFIG_EDAC
    -DCONFIG_EDAC_LEGACY_SYSFS
    -DCONFIG_EDAC_DECODE_MCE
    -DCONFIG_RTC_LIB
    -DCONFIG_RTC_MC146818_LIB
    -DCONFIG_RTC_CLASS
    -DCONFIG_RTC_SYSTOHC
    -DCONFIG_RTC_SYSTOHC_DEVICE
    -DCONFIG_RTC_NVMEM
    -DCONFIG_RTC_INTF_SYSFS
    -DCONFIG_RTC_INTF_PROC
    -DCONFIG_RTC_INTF_DEV
    -DCONFIG_RTC_I2C_AND_SPI
    -DCONFIG_RTC_DRV_CMOS
    -DCONFIG_DMADEVICES
    -DCONFIG_DMA_ENGINE
    -DCONFIG_DMA_VIRTUAL_CHANNELS
    -DCONFIG_DMA_ACPI
    -DCONFIG_DW_DMAC_CORE
    -DCONFIG_HSU_DMA
    -DCONFIG_SYNC_FILE
    -DCONFIG_VIRTIO
    -DCONFIG_VIRTIO_MENU
    -DCONFIG_VIRTIO_PCI
    -DCONFIG_VIRTIO_PCI_LEGACY
    -DCONFIG_VIRTIO_INPUT
    -DCONFIG_X86_PLATFORM_DEVICES
    -DCONFIG_EEEPC_LAPTOP
    -DCONFIG_PMC_ATOM
    -DCONFIG_CLKDEV_LOOKUP
    -DCONFIG_HAVE_CLK_PREPARE
    -DCONFIG_COMMON_CLK
    -DCONFIG_CLKEVT_I8253
    -DCONFIG_I8253_LOCK
    -DCONFIG_CLKBLD_I8253
    -DCONFIG_MAILBOX
    -DCONFIG_PCC
    -DCONFIG_IOMMU_IOVA
    -DCONFIG_IOMMU_API
    -DCONFIG_IOMMU_SUPPORT
    -DCONFIG_AMD_IOMMU
    -DCONFIG_DMAR_TABLE
    -DCONFIG_INTEL_IOMMU
    -DCONFIG_INTEL_IOMMU_FLOPPY_WA
    -DCONFIG_RAS
    -DCONFIG_NVMEM
    -DCONFIG_NVMEM_SYSFS
    -DCONFIG_DCACHE_WORD_ACCESS
    -DCONFIG_FS_IOMAP
    -DCONFIG_EXT4_FS
    -DCONFIG_EXT4_USE_FOR_EXT2
    -DCONFIG_EXT4_FS_POSIX_ACL
    -DCONFIG_EXT4_FS_SECURITY
    -DCONFIG_JBD2
    -DCONFIG_FS_MBCACHE
    -DCONFIG_FS_POSIX_ACL
    -DCONFIG_EXPORTFS
    -DCONFIG_FILE_LOCKING
    -DCONFIG_MANDATORY_FILE_LOCKING
    -DCONFIG_FSNOTIFY
    -DCONFIG_DNOTIFY
    -DCONFIG_INOTIFY_USER
    -DCONFIG_QUOTA
    -DCONFIG_QUOTA_NETLINK_INTERFACE
    -DCONFIG_QUOTA_TREE
    -DCONFIG_QFMT_V2
    -DCONFIG_QUOTACTL
    -DCONFIG_QUOTACTL_COMPAT
    -DCONFIG_AUTOFS4_FS
    -DCONFIG_AUTOFS_FS
    -DCONFIG_ISO9660_FS
    -DCONFIG_JOLIET
    -DCONFIG_ZISOFS
    -DCONFIG_FAT_FS
    -DCONFIG_MSDOS_FS
    -DCONFIG_VFAT_FS
    -DCONFIG_FAT_DEFAULT_CODEPAGE
    -DCONFIG_FAT_DEFAULT_IOCHARSET
    -DCONFIG_PROC_FS
    -DCONFIG_PROC_KCORE
    -DCONFIG_PROC_VMCORE
    -DCONFIG_PROC_SYSCTL
    -DCONFIG_PROC_PAGE_MONITOR
    -DCONFIG_PROC_PID_ARCH_STATUS
    -DCONFIG_KERNFS
    -DCONFIG_SYSFS
    -DCONFIG_TMPFS
    -DCONFIG_TMPFS_POSIX_ACL
    -DCONFIG_TMPFS_XATTR
    -DCONFIG_HUGETLBFS
    -DCONFIG_HUGETLB_PAGE
    -DCONFIG_MEMFD_CREATE
    -DCONFIG_ARCH_HAS_GIGANTIC_PAGE
    -DCONFIG_EFIVAR_FS
    -DCONFIG_MISC_FILESYSTEMS
    -DCONFIG_NETWORK_FILESYSTEMS
    -DCONFIG_NFS_FS
    -DCONFIG_NFS_V2
    -DCONFIG_NFS_V3
    -DCONFIG_NFS_V3_ACL
    -DCONFIG_NFS_V4
    -DCONFIG_ROOT_NFS
    -DCONFIG_NFS_USE_KERNEL_DNS
    -DCONFIG_GRACE_PERIOD
    -DCONFIG_LOCKD
    -DCONFIG_LOCKD_V4
    -DCONFIG_NFS_ACL_SUPPORT
    -DCONFIG_NFS_COMMON
    -DCONFIG_SUNRPC
    -DCONFIG_SUNRPC_GSS
    -DCONFIG_9P_FS
    -DCONFIG_NLS
    -DCONFIG_NLS_DEFAULT
    -DCONFIG_NLS_CODEPAGE_437
    -DCONFIG_NLS_ASCII
    -DCONFIG_NLS_ISO8859_1
    -DCONFIG_NLS_UTF8
    -DCONFIG_KEYS
    -DCONFIG_KEYS_COMPAT
    -DCONFIG_SECURITY
    -DCONFIG_SECURITY_WRITABLE_HOOKS
    -DCONFIG_SECURITY_NETWORK
    -DCONFIG_PAGE_TABLE_ISOLATION
    -DCONFIG_LSM_MMAP_MIN_ADDR
    -DCONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR
    -DCONFIG_SECURITY_SELINUX
    -DCONFIG_SECURITY_SELINUX_BOOTPARAM
    -DCONFIG_SECURITY_SELINUX_DISABLE
    -DCONFIG_SECURITY_SELINUX_DEVELOP
    -DCONFIG_SECURITY_SELINUX_AVC_STATS
    -DCONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE
    -DCONFIG_INTEGRITY
    -DCONFIG_INTEGRITY_AUDIT
    -DCONFIG_DEFAULT_SECURITY_SELINUX
    -DCONFIG_LSM
    -DCONFIG_INIT_STACK_NONE
    -DCONFIG_CRYPTO
    -DCONFIG_CRYPTO_ALGAPI
    -DCONFIG_CRYPTO_ALGAPI2
    -DCONFIG_CRYPTO_AEAD
    -DCONFIG_CRYPTO_AEAD2
    -DCONFIG_CRYPTO_BLKCIPHER
    -DCONFIG_CRYPTO_BLKCIPHER2
    -DCONFIG_CRYPTO_HASH
    -DCONFIG_CRYPTO_HASH2
    -DCONFIG_CRYPTO_RNG
    -DCONFIG_CRYPTO_RNG2
    -DCONFIG_CRYPTO_RNG_DEFAULT
    -DCONFIG_CRYPTO_AKCIPHER2
    -DCONFIG_CRYPTO_AKCIPHER
    -DCONFIG_CRYPTO_KPP2
    -DCONFIG_CRYPTO_ACOMP2
    -DCONFIG_CRYPTO_MANAGER
    -DCONFIG_CRYPTO_MANAGER2
    -DCONFIG_CRYPTO_MANAGER_DISABLE_TESTS
    -DCONFIG_CRYPTO_GF128MUL
    -DCONFIG_CRYPTO_NULL
    -DCONFIG_CRYPTO_NULL2
    -DCONFIG_CRYPTO_AUTHENC
    -DCONFIG_CRYPTO_ENGINE
    -DCONFIG_CRYPTO_RSA
    -DCONFIG_CRYPTO_CCM
    -DCONFIG_CRYPTO_GCM
    -DCONFIG_CRYPTO_SEQIV
    -DCONFIG_CRYPTO_ECHAINIV
    -DCONFIG_CRYPTO_CBC
    -DCONFIG_CRYPTO_CTR
    -DCONFIG_CRYPTO_CMAC
    -DCONFIG_CRYPTO_HMAC
    -DCONFIG_CRYPTO_CRC32C
    -DCONFIG_CRYPTO_GHASH
    -DCONFIG_CRYPTO_MD5
    -DCONFIG_CRYPTO_SHA1
    -DCONFIG_CRYPTO_LIB_SHA256
    -DCONFIG_CRYPTO_SHA256
    -DCONFIG_CRYPTO_LIB_AES
    -DCONFIG_CRYPTO_AES
    -DCONFIG_CRYPTO_LIB_ARC4
    -DCONFIG_CRYPTO_LIB_DES
    -DCONFIG_CRYPTO_DES
    -DCONFIG_CRYPTO_DRBG_MENU
    -DCONFIG_CRYPTO_DRBG_HMAC
    -DCONFIG_CRYPTO_DRBG
    -DCONFIG_CRYPTO_JITTERENTROPY
    -DCONFIG_CRYPTO_HASH_INFO
    -DCONFIG_CRYPTO_HW
    -DCONFIG_CRYPTO_DEV_VIRTIO
    -DCONFIG_ASYMMETRIC_KEY_TYPE
    -DCONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE
    -DCONFIG_X509_CERTIFICATE_PARSER
    -DCONFIG_PKCS7_MESSAGE_PARSER
    -DCONFIG_SYSTEM_TRUSTED_KEYRING
    -DCONFIG_SYSTEM_TRUSTED_KEYS
    -DCONFIG_BINARY_PRINTF
    -DCONFIG_BITREVERSE
    -DCONFIG_GENERIC_STRNCPY_FROM_USER
    -DCONFIG_GENERIC_STRNLEN_USER
    -DCONFIG_GENERIC_NET_UTILS
    -DCONFIG_GENERIC_FIND_FIRST_BIT
    -DCONFIG_RATIONAL
    -DCONFIG_GENERIC_PCI_IOMAP
    -DCONFIG_GENERIC_IOMAP
    -DCONFIG_ARCH_USE_CMPXCHG_LOCKREF
    -DCONFIG_ARCH_HAS_FAST_MULTIPLIER
    -DCONFIG_CRC_CCITT
    -DCONFIG_CRC16
    -DCONFIG_CRC32
    -DCONFIG_CRC32_SLICEBY8
    -DCONFIG_ZLIB_INFLATE
    -DCONFIG_ZLIB_DEFLATE
    -DCONFIG_LZO_COMPRESS
    -DCONFIG_LZO_DECOMPRESS
    -DCONFIG_LZ4_DECOMPRESS
    -DCONFIG_XZ_DEC
    -DCONFIG_XZ_DEC_X86
    -DCONFIG_XZ_DEC_POWERPC
    -DCONFIG_XZ_DEC_IA64
    -DCONFIG_XZ_DEC_ARM
    -DCONFIG_XZ_DEC_ARMTHUMB
    -DCONFIG_XZ_DEC_SPARC
    -DCONFIG_XZ_DEC_BCJ
    -DCONFIG_DECOMPRESS_GZIP
    -DCONFIG_DECOMPRESS_BZIP2
    -DCONFIG_DECOMPRESS_LZMA
    -DCONFIG_DECOMPRESS_XZ
    -DCONFIG_DECOMPRESS_LZO
    -DCONFIG_DECOMPRESS_LZ4
    -DCONFIG_GENERIC_ALLOCATOR
    -DCONFIG_INTERVAL_TREE
    -DCONFIG_ASSOCIATIVE_ARRAY
    -DCONFIG_HAS_IOMEM
    -DCONFIG_HAS_IOPORT_MAP
    -DCONFIG_HAS_DMA
    -DCONFIG_NEED_SG_DMA_LENGTH
    -DCONFIG_NEED_DMA_MAP_STATE
    -DCONFIG_ARCH_DMA_ADDR_T_64BIT
    -DCONFIG_SWIOTLB
    -DCONFIG_SGL_ALLOC
    -DCONFIG_IOMMU_HELPER
    -DCONFIG_CHECK_SIGNATURE
    -DCONFIG_CPU_RMAP
    -DCONFIG_DQL
    -DCONFIG_GLOB
    -DCONFIG_NLATTR
    -DCONFIG_CLZ_TAB
    -DCONFIG_MPILIB
    -DCONFIG_OID_REGISTRY
    -DCONFIG_UCS2_STRING
    -DCONFIG_HAVE_GENERIC_VDSO
    -DCONFIG_GENERIC_GETTIMEOFDAY
    -DCONFIG_FONT_SUPPORT
    -DCONFIG_FONT_8x8
    -DCONFIG_FONT_8x16
    -DCONFIG_SG_POOL
    -DCONFIG_ARCH_HAS_PMEM_API
    -DCONFIG_ARCH_HAS_UACCESS_FLUSHCACHE
    -DCONFIG_ARCH_HAS_UACCESS_MCSAFE
    -DCONFIG_ARCH_STACKWALK
    -DCONFIG_SBITMAP
    -DCONFIG_PRINTK_TIME
    -DCONFIG_CONSOLE_LOGLEVEL_DEFAULT
    -DCONFIG_CONSOLE_LOGLEVEL_QUIET
    -DCONFIG_MESSAGE_LOGLEVEL_DEFAULT
    -DCONFIG_ENABLE_MUST_CHECK
    -DCONFIG_FRAME_WARN
    -DCONFIG_DEBUG_FS
    -DCONFIG_OPTIMIZE_INLINING
    -DCONFIG_SECTION_MISMATCH_WARN_ONLY
    -DCONFIG_STACK_VALIDATION
    -DCONFIG_MAGIC_SYSRQ
    -DCONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE
    -DCONFIG_MAGIC_SYSRQ_SERIAL
    -DCONFIG_DEBUG_KERNEL
    -DCONFIG_DEBUG_MISC
    -DCONFIG_HAVE_DEBUG_KMEMLEAK
    -DCONFIG_DEBUG_STACK_USAGE
    -DCONFIG_ARCH_HAS_DEBUG_VIRTUAL
    -DCONFIG_DEBUG_MEMORY_INIT
    -DCONFIG_HAVE_ARCH_KASAN
    -DCONFIG_CC_HAS_KASAN_GENERIC
    -DCONFIG_KASAN_STACK
    -DCONFIG_ARCH_HAS_KCOV
    -DCONFIG_CC_HAS_SANCOV_TRACE_PC
    -DCONFIG_HARDLOCKUP_CHECK_TIMESTAMP
    -DCONFIG_PANIC_ON_OOPS_VALUE
    -DCONFIG_PANIC_TIMEOUT
    -DCONFIG_SCHED_INFO
    -DCONFIG_SCHEDSTATS
    -DCONFIG_LOCK_DEBUGGING_SUPPORT
    -DCONFIG_STACKTRACE
    -DCONFIG_DEBUG_BUGVERBOSE
    -DCONFIG_RCU_CPU_STALL_TIMEOUT
    -DCONFIG_RCU_TRACE
    -DCONFIG_FUNCTION_ERROR_INJECTION
    -DCONFIG_USER_STACKTRACE_SUPPORT
    -DCONFIG_NOP_TRACER
    -DCONFIG_HAVE_FUNCTION_TRACER
    -DCONFIG_HAVE_FUNCTION_GRAPH_TRACER
    -DCONFIG_HAVE_DYNAMIC_FTRACE
    -DCONFIG_HAVE_DYNAMIC_FTRACE_WITH_REGS
    -DCONFIG_HAVE_FTRACE_MCOUNT_RECORD
    -DCONFIG_HAVE_SYSCALL_TRACEPOINTS
    -DCONFIG_HAVE_FENTRY
    -DCONFIG_HAVE_C_RECORDMCOUNT
    -DCONFIG_TRACE_CLOCK
    -DCONFIG_RING_BUFFER
    -DCONFIG_EVENT_TRACING
    -DCONFIG_CONTEXT_SWITCH_TRACER
    -DCONFIG_TRACING
    -DCONFIG_GENERIC_TRACER
    -DCONFIG_TRACING_SUPPORT
    -DCONFIG_FTRACE
    -DCONFIG_BRANCH_PROFILE_NONE
    -DCONFIG_BLK_DEV_IO_TRACE
    -DCONFIG_KPROBE_EVENTS
    -DCONFIG_UPROBE_EVENTS
    -DCONFIG_DYNAMIC_EVENTS
    -DCONFIG_PROBE_EVENTS
    -DCONFIG_PROVIDE_OHCI1394_DMA_INIT
    -DCONFIG_RUNTIME_TESTING_MENU
    -DCONFIG_HAVE_ARCH_KGDB
    -DCONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL
    -DCONFIG_UBSAN_ALIGNMENT
    -DCONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED
    -DCONFIG_STRICT_DEVMEM
    -DCONFIG_TRACE_IRQFLAGS_SUPPORT
    -DCONFIG_EARLY_PRINTK_USB
    -DCONFIG_X86_VERBOSE_BOOTUP
    -DCONFIG_EARLY_PRINTK
    -DCONFIG_EARLY_PRINTK_DBGP
    -DCONFIG_DOUBLEFAULT
    -DCONFIG_HAVE_MMIOTRACE_SUPPORT
    -DCONFIG_IO_DELAY_0X80
    -DCONFIG_DEBUG_BOOT_PARAMS
    -DCONFIG_X86_DEBUG_FPU
    -DCONFIG_UNWINDER_ORC
    -DDEFAULT_SYMBOL_NAMESPACE # for EXPORT_SYMBOL macro
    -D__KERNEL__ # priveledged kernel build
    -DCONFIG_TIME_LOW_RES # 
    -DCONFIG_ARCH_ENABLE_THP_MIGRATION
)

# # do not grab source/header files in nested directoriess
set(SRC_FILES
    #binfmt_flat.c do not include because it looks for asm/flat.h which does not exist under arch/x86
    #namei.c issue with page table
    open.c
    splice.c
    drop_caches.c
    #io_uring.c
    inode.c
    proc_namespace.c
    #aio.c
    #userfaultfd.c
    stack.c
    pnode.h
    mount.h
    attr.c
    libfs.c
    #binfmt_aout.c
    d_path.c
    mbcache.c
    statfs.c
    fs-writeback.c
    sync.c
    #binfmt_elf.c
    #compat_ioctl.c
    exec.c
    readdir.c
    timerfd.c
    #binfmt_elf_fdpic.c
    internal.h
    eventfd.c
    utimes.c
    namespace.c
    fs_pin.c
    file_table.c
    #binfmt_em86.c
    fs_parser.c
    fs_struct.c
    #binfmt_misc.c
    super.c
    anon_inodes.c
    char_dev.c
    #mpage.c
    eventpoll.c
    seq_file.c
    buffer.c
    select.c
    fs_types.c
    nsfs.c
    coredump.c
    fhandle.c
    read_write.c
    bad_inode.c
    #binfmt_script.c
    pnode.c
    dcache.c
    file.c
    #signalfd.c
    #compat_binfmt_elf.c
    fcntl.c
    pipe.c
    #ioctl.c
    #posix_acl.c
    xattr.c
    fsopen.c
    #direct-io.c
    #compat.c
    fs_context.c
    locks.c
    dax.c
    stat.c
    filesystems.c
)

#file(GLOB SRC_FILES "${CMAKE_SOURCE_DIR}/*.c" "${CMAKE_SOURCE_DIR}/*.h")

# default include for all linux modules
include_directories("${CMAKE_SOURCE_DIR}/../include")

# TODO - figure out a better way to determine machine architecture... for now hard code to x86
include_directories("${CMAKE_SOURCE_DIR}/../arch/x86/include")
include_directories("${CMAKE_SOURCE_DIR}/../arch/x86/include/generated")

# for include of <include/time_types.h>
include_directories("${CMAKE_SOURCE_DIR}/../include/uapi/")

add_executable(${PROJECT_NAME} ${SRC_FILES})

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
